src/content/docs/versions/ts-sdk/0.3.x/nodejs/smelter.mdx
---
title: Smelter
sidebar:
  order: 1
slug: ts-sdk/0.3.x/ts-sdk/nodejs/smelter
---

import CollapsibleDetails from '@components/CollapsibleDetails.astro';

```tsx
import Smelter from "@swmansion/smelter-node"
```

`Smelter` class is a primary way of interacting with the Smelter server.

## Usage

To use `Smelter` follow this life cycle:

* Create instance `new Smelter()`.
* Call `await smelter.init()`.
* (optional) Register inputs, outputs or other resources.
* Call `await smelter.start()`.
* (optional) Register inputs, outputs or other resources.
* At the end, call `await smelter.terminate()`

<br />

<CollapsibleDetails summaryTitle="Example">
  ```tsx
  import Smelter from "@swmansion/smelter-node"

  async function run() {
    const smelter = new Smelter();
    await smelter.init()

    // register inputs, outputs, or other resources e.g.
    await smelter.registerOutput("example", <View />, {
      type: "rtmp_client",
      url: "rtmp://example.com/app/stream_key",
      video: {
        encoder: { type: "ffmpeg_h264" },
        resolution: { width: 1920, height: 1080 },
      },
      audio: {
        channels: "stereo",
        encoder: { type: "aac" },
      }
    });

    await smelter.start()

    // you can register additional input/outputs at any point
  }
  void run();
  ```
</CollapsibleDetails>

## new Smelter()

Creates a new Smelter instance. You have to call [init()](#init) first before this object can be used.

```tsx
new Smelter(manager?: SmelterManager)
```

<CollapsibleDetails summaryTitle="Type definitions">
  ```tsx
    type ApiRequest = {
      method: 'GET' | 'POST';
      route: string;
      body?: object;
    };

    type MultipartRequest = {
      method: 'POST';
      route: string;
      body: any;
    };

    type SmelterManager = {
      setupInstance(): Promise<void>;
      sendRequest(request: ApiRequest): Promise<object>;
      sendMultipartRequest(request: MultipartRequest): Promise<object>;
      registerEventListener(cb: (event: unknown) => void): void;
    }
  ```
</CollapsibleDetails>

#### manager

Configures how the client code will connect and manage a Smelter server.

* **Type**: [`SmelterManager`](/ts-sdk/0.3.x/nodejs/manager)

## init()

```tsx
Smelter.init(): Promise<void>
```

Initialize the Smelter instance. This might spawn a new instance or just establish a connection.

After `init()` you can start connecting inputs/outputs or register other elements. However, no output stream will be produced until `start()` method is called.

## start()

```tsx
smelter.start(): Promise<void>
```

Starts the processing pipeline. Any previously registered output will start producing the video/audio stream.

## registerOutput()

```tsx
smelter.registerOutput(
    outputId: string,
    output: RegisterOutput,
): Promise<object>
```

<CollapsibleDetails summaryTitle="Type definitions">
  ```tsx
  import {
      RegisterRtpOutput,
      RegisterMp4Output,
      RegisterHlsOutput,
      RegisterWhipClientOutput,
      RegisterWhepServerOutput,
      RegisterRtmpClientOutput,
  } from "@swmasnion/smelter"

  type RegisterOutput =
      | ({ type: 'rtp_stream' } & RegisterRtpOutput)
      | ({ type: 'mp4' } & RegisterMp4Output)
      | ({ type: 'hls' } & RegisterHlsOutput)
      | ({ type: 'whip_client' } & RegisterWhipClientOutput)
      | ({ type: 'whep_server' } & RegisterWhepServerOutput)
      | ({ type: 'rtmp_client' } & RegisterRtmpClientOutput);
  ```
</CollapsibleDetails>

Register external destination that can be used as a smelter output. Visit output documentation to learn more.

* [RTP](/ts-sdk/0.3.x/outputs/rtp)
* [MP4](/ts-sdk/0.3.x/outputs/mp4)
* [HLS](/ts-sdk/0.3.x/outputs/hls)
* [WHEP server](/ts-sdk/0.3.x/outputs/whep)
* [WHIP client](/ts-sdk/0.3.x/outputs/whip)
* [RTMP client](/ts-sdk/0.3.x/outputs/rtmp)

## unregisterOutput()

```tsx
Smelter.unregisterOutput(outputId: string): Promise<void>
```

Unregister previously registered output.

## registerInput()

```tsx
Smelter.registerInput(
    inputId: string,
    input: RegisterInput
): Promise<object>
```

<CollapsibleDetails summaryTitle="Type definitions">
  ```tsx
  import {
      RegisterRtpInput,
      RegisterMp4Input,
      RegisterHlsInput,
      RegisterWhipServerInput,
      RegisterWhepClientInput,
  } from "@swmasnion/smelter"

  type RegisterInput =
      | ({ type: 'rtp_stream' } & RegisterRtpInput)
      | ({ type: 'mp4' } & RegisterMp4Input)
      | ({ type: 'hls' } & RegisterHlsInput)
      | ({ type: 'whip_server' } & RegisterWhipServerInput)
      | ({ type: 'whep_client' } & RegisterWhepClientInput)
      | ({ type: 'rtmp_server' } & RegisterRtmpServerInput);
  ```
</CollapsibleDetails>

Register external source that can be used as a smelter input. Visit input documentation to learn more.

* [RTP](/ts-sdk/0.3.x/inputs/rtp)
* [MP4](/ts-sdk/0.3.x/inputs/mp4)
* [HLS](/ts-sdk/0.3.x/inputs/hls)
* [WHIP server](/ts-sdk/0.3.x/inputs/whip)
* [WHEP client](/ts-sdk/0.3.x/inputs/whep)
* [RTMP server](/ts-sdk/0.3.x/inputs/rtmp)

## unregisterInput()

```tsx
smelter.unregisterInput(inputId: string): Promise<void>
```

Unregister previously registered input.

## registerImage()

```tsx
import { Renderers } from "@swmansion/smelter"

smelter.registerImage(
    imageId: string,
    image: Renderers.RegisterImage,
): Promise<void>
```

Register an image asset. See [RegisterImage](/ts-sdk/0.3.x/resources/image) to learn more.

## unregisterImage()

```tsx
smelter.unregisterImage(imageId: string): Promise<void>
```

Unregister a previously registered image asset.

## registerShader()

```tsx
import { Renderers } from "@swmnasion/smelter"

smelter.registerShader(
    shaderId: string,
    shader: Renderers.RegisterShader,
): Promise<void>
```

Register a shader. See [RegisterShader](/ts-sdk/0.3.x/resources/shader) to learn more.

## unregisterShader()

```tsx
smelter.unregisterShader(shaderId: string): Promise<void>
```

Unregister a previously registered shader.

## registerWebRenderer()

```tsx
import { Renderers } from "@swmansion/smelter"

smelter.registerWebRenderer(
    instanceId: string,
    instance: Renderers.RegisterWebRenderer,
): Promise<object>
```

Register a web renderer instance. See [RegisterWebRenderer](/ts-sdk/0.3.x/resources/web-renderer) to learn more.

## unregisterWebRenderer()

```tsx
smelter.unregisterWebRenderer(instanceId: string): Promise<void>
```

Unregister a previously registered web renderer.

## registerFont()

```tsx
smelter.registerFont(source: FontSource): Promise<void>
```

<CollapsibleDetails summaryTitle="Type definitions">
  ```tsx
  type FontSource =
      | 'string' // URL
      | ArrayBuffer
  ```
</CollapsibleDetails>

Register a new font, that can be used when rendering `<Text>` component.

## terminate()

```tsx
smelter.terminate(): Promise<void>
```

Terminate the compositor instance. Depending on implementation it might just drop connection to
the server, or shutdown server.
